<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_head_image_selected_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/image_seletor_bg"
        android:clickable="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/image_from_taking_photo"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/list_selector"
            android:text="@string/text_capture"
            android:textColor="@color/fanxq_text_98_98_100"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/common_line_bg" />

        <Button
            android:id="@+id/image_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/list_selector"
            android:text="@string/text_picture"
            android:textColor="@color/fanxq_text_98_98_100"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mylexue_image_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_result_press" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/cancel_text"
            android:textColor="@color/header_bar_text_color_selector"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>